# GoIT_WEB_HW_8

./: README.md  config.ini  models.py  pyproject.toml  queries.py  upload_to_DB.py
Part 1/: models.py  queries.py  upload_to_DB.py
Part 2/: consumer.py  consumer_sms.py  models.py  producer.py
